Fix memory leak of QGLGlyphCoord objects in the OpenGL1 paint engine

Task-number: QTBUG-6936
Reviewed-by: Julian de Bhal